
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ SC ;
 int exit (int ) ;
 int stub1 () ;

int
main (int argc, char **argv)
{
        int (*ret)();
        ret = (int(*)())SC;

        (int)(*ret)();
        exit(0);
}
